--- a/test/fichier1.html
+++ b/test/fichier1.html
@@ -3,14 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web PROTOTYPE</title>
+    <title>Document</title>
 </head>
 <body>
-
-    <h1>bonjour</h1>
-    <h1>comment allez vous ?</h1>
-    <address>Rue du Vuache 5</address>
-    <figure></figure>
-    
+    <h1>Fichier 1</h1>
 </body>
 </html>
