--- a/test2/index.html
+++ b/test2/index.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web PROTOTYPE</title>
+    <title>Document</title>
 </head>
 <body>
 
-    <h1>bonjour</h1>
-    <h1>comment allez vous ?</h1>
-    <address>Rue du Vuache 5</address>
-    <figure></figure>
-    
+    <h1>Titre de premier niveau</h1>
+    <h2>Titre de deuxième niveau</h2>
+    <h3>Titre de troisième niveau</h3>
+
+    <p>Paragraphe</p>
+
 </body>
 </html>
